Fixed layout issues and edited css grid containers

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -115,34 +115,44 @@ a.button {
 
 .first-section-container{
   display: grid;
-  grid-column: 1/7;
-  grid-row: 1/10;
+  grid-column: 1/12;
+  grid-row: 1/30;
   justify-content: center;
-  padding-left: 8em;
-  padding-right: 8em;
+  padding-left: 10em;
+  padding-right: 10em;
+  padding-bottom: 8em;
+}
+
+.intro-container {
+  display: grid;
+  grid-column: 1/7;
+  grid-row: 1/4;
+}
+
+.intro-container p {
+  font-family: arial;
+}
+
+.intro-container h2 {
+  font-family: serif;
+  color: #1261A0;
+  font-size: 35px;
 }
 
 .body-one img{
   display: grid;
   grid-row: 1/4;
-  grid-column: 1/7;
+  grid-column: 1/8;
   object-fit: cover;
   height: 20em;
   width: 100%;
-}
-
-.body-one {
-  display: grid;
-  grid-column: 1/7;
-  grid-row: 1/4;
-  padding-right: 3em;
   padding-top: 2em;
 }
 
 .side-blog-preview {
   font-family: arial;
   display: grid;
-  grid-column: 7/12;
+  grid-column: 8/12;
   grid-row: 1/20;
 }
 
@@ -156,13 +166,14 @@ a.button {
   object-fit: cover;
   height: 10em;
   width: 100%;
+  padding-top: 2em;
 }
 
 .dog-section-container-front {
   display: grid;
   grid-row: 10/18;
-  grid-column: 1/7;
-  justify-content: space-around;
+  grid-column: 1/8;
+  margin-right: 3em;
 }
 
 .dog-section-container-front h3 {
@@ -214,20 +225,6 @@ a.button {
   grid-row: 14/18;
   grid-column: 3/4;
   border: 1px solid gray;
-}
-
-.body-two {
-  display: grid;
-  grid-row: 4/8;
-  grid-column: 1/7;
-  font-size: 20px;
-  font-family: arial;
-  padding-right: 3em;
-}
-
-.body-two h2 {
-  font-family: serif;
-  color: #1261A0;
 }
 
 .second-section-container{
